# smart-supply-chain-ai

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
data/processed/: .gitignore  data_for_compare.parquet.dvc  data_for_compare.pkl.dvc  data_for_train.parquet.dvc  data_for_train.pkl.dvc  feature_eng_complete.pkl.dvc  full_data_cleaned.pkl.dvc  grocery.parquet.dvc  grocery.pkl.dvc  product_seasonality.csv  time_serie.pkl.dvc
data/raw/: .gitignore  Grocery_Inventory_and_Sales_Dataset.csv.dvc  grocery_data.csv.dvc  grocery_stats.csv.dvc  synthetic_data_grocery_stock.csv.dvc
docs/: Summary_EDA_Module01.md  Summary_EDA_TimeSeries_Module01.md  column_descriptions.json  column_descriptions_feat_eng.json  data.md  feat_eng_column_descriptions.json  propose_project.md  structure_project.md
notebooks/: 01-data_preprocessing.ipynb  01-load_data.ipynb  01-mod_demand_inventory.ipynb  02-EDA_time_series.ipynb  02-demand_forecasting.ipynb  02-time_series_analysis.ipynb  03-Feature_Engineering_TS.ipynb  03-forecasting_base_model.ipynb  03-pycaret-forecasting.ipynb  04-statistic_fc_base_model.ipynb  05-forecasting_base_model.ipynb  05-ml_fc_base_model.ipynb  synthetic_grocery.ipynb
src/smart_supply_chain_ai/data_processing/: get_data.py
src/smart_supply_chain_ai/utils/: combine_df_functions.py  create_data_functions.py  functions.py  grocery_dict.json  grocery_prices.json  metrics.py  mlflow_start.py  preprocess_functions.py  preprocess_gapFreq.py  process_class.py  product_mean_shelf_life.json  product_suppliers.json  products.json  products_categories.json  storage_info.json  suppliers.json  time_series_functions.py  weather_conditions.py
