[project]
name = "smart-supply-chain-ai"
version = "0.1.0"
description = "Sistema Inteligente de Otimização de Estoque e Compras com Visão Computacional"
authors = [
    {name = "Roberto Rosário Balbinotti", email = "balbinotti@proton.me"},
]
dependencies = ["pandas>=2.3.1", "numpy>=2.3.2", "scikit-learn>=1.7.1", "plotly>=6.3.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "Creative Commons Attribution-NonCommercial 4.0 International"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "dvc>=3.62.0",
    "kagglehub>=0.3.12",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.7",
    "kaggle>=1.7.4.5",
    "deptry>=0.23.1",
    "pre-commit>=4.3.0",
]
