[project]
name = "smart-supply-chain-ai"
version = "0.1.0"
description = "Intelligent System for Inventory and Purchasing Optimization with Computer Vision"
authors = [
    {name = "Roberto Balbinotti", email = "rbalbinotti@gmail.com"},
]
dependencies = ["pandas>=2.1.4", "plotly>=5.24.1", "kaggle>=1.7.4.5", "scikit-learn>=1.7.1", "statsmodels>=0.14.5", "lightgbm>=4.6.0", "xgboost>=3.0.4", "mlflow>=3.3.1", "sktime>=0.38.5"]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = {text = "Creative Commons Attribution-NonCommercial 4.0 International"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "dvc>=3.62.0",
    "kagglehub>=0.3.12",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.7",
    "deptry>=0.23.1",
    "pre-commit>=4.3.0",
    
]

[tool.deptry]
ignore = ["DEP003"]

[tool.pdm]
distribution = true

